...
                    android:textColor="@color/gray"/>
                <EditText
                    android:id="@+id/event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    />
                <EditText
                    android:id="@+id/event_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    />
                <EditText
                    android:id="@+id/event_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    />
                <EditText
                    android:id="@+id/event_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                        />
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/privacy_toggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
...
                    />
                <Button
                    android:id="@+id/due_time"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
...
                    />
                <Button
                    android:id="@+id/times"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
...
                    />
                <EditText
                    android:id="@+id/user_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    />
                <Button
                    android:id="@+id/invite_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                        app:layout_constraintVertical_bias="0">
                        <TextView
                            android:id="@+id/event_invitees"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
...
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:id="@+id/invite_error"
                    android:layout_width="200dp"
                    android:gravity="center"
...
                    />
                <Button
                    android:id="@+id/submit_event"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
...
                    />
                <TextView
                    android:id="@+id/error"
                    android:layout_width="200dp"
                    android:gravity="center"
...
