...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarTextColor="@color/white"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:layout_marginTop="-40dp"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">
        <TimePicker
            android:id="@+id/start_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:timePickerMode="spinner"
            android:layout_marginTop="-40dp"
            android:layout_marginBottom="-40dp"
            android:layout_marginLeft="-40dp"
            android:layout_marginRight="-40dp"
            android:scaleX="0.60"
            android:scaleY="0.60" />
        <TimePicker
            android:id="@+id/end_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:timePickerMode="spinner"
            android:scaleX="0.60"
            android:scaleY="0.60"
...
            android:textSize="11sp"
            android:textAllCaps="false"
            android:layout_marginTop="6dp"

            />
        <Button
            android:id="@+id/submit_range"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:text="@string/submit_range"
            android:fontFamily="@font/rubik_medium_italic"
...
