...
    <ImageView
        android:id="@+id/logo"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo_white"
        app:layout_constraintBottom_toTopOf="@+id/username_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_text"
...
        android:textColorHint="@color/transparent_white"
        android:fontFamily="@font/rubik_light_italic"
        android:inputType="textEmailAddress"
        />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="80dp"
...
        android:textColorHint="@color/transparent_white"
        android:fontFamily="@font/rubik_light_italic"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="130dp"
        android:layout_marginRight="130dp"
        android:layout_marginTop="40dp"
...
