...
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/gray"
        />

    <TextView
        android:id="@+id/invitations_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:text="@string/invitations"
        android:fontFamily="@font/rubik_medium"
        android:textSize="28dp"
...
                android:textSize="15sp"
                android:text="@string/attending_events"
                android:textColor="@color/white"
                />

            <Button
                android:id="@+id/hosting_button"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:layout_gravity="start"
                android:layout_marginLeft="20dp"
                android:backgroundTint="@color/orange"
                android:enabled="true"
...
                android:text="@string/hosted_events"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/create_event_button"
                android:textAllCaps="false"
                android:layout_width="160dp"
                android:layout_height="112dp"
                android:paddingTop="28dp"
                android:layout_marginLeft="20dp"
                android:paddingLeft="14dp"
...
